# lobster

./: .gitignore  test_perf.py
lobster-rust/: Cargo.toml  Dockerfile  Justfile  LICENSE  MIGRATION.md  PORTING.md  README.md
lobster-rust/.github/workflows/: ci.yml
lobster-rust/examples/: document-triage.yaml  system-health.md
lobster-rust/src/: config.rs  engine.rs  main.rs  mcp_server.rs  models.rs  parser.rs  telemetry.rs
