[package]
name = "lobster-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
toml = "0.8"
mcp-sdk-rs = "0.3.4"
opentelemetry = { version = "0.24", features = ["trace"] }
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.25"
clap = { version = "4.5", features = ["derive"] }
sysinfo = "0.31"
anyhow = "1.0"
async-trait = "0.1"
futures = "0.3"
uuid = { version = "1.8", features = ["v4"] }
chrono = "0.4"
glob = "0.3"
regex = "1.10"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"

[dev-dependencies]
tempfile = "3"
